--- a/README.org
+++ b/README.org
@@ -60,6 +60,13 @@ its content.
 
 ** Abril 2024
 
+*** 18-Abr-24
++ [[https://arxiv.org/abs/2404.08163][ViCAR: Visualizing categories with automated rewriting in Coq]]. ~ Bhakti Shah et als. #ITP #Coq
++ [[https://arxiv.org/abs/2404.12048][Symbolic computation for all the fun]]. ~ Chad E. Brown, Mikoláš Janota, Mirek Olšák. #AIMO #ATP #SMT #Math
++ [[https://link.springer.com/content/pdf/10.1007/978-3-031-45784-5.pd][Towards a certified proof checker for deep neural network verification]]. ~ Remi Desmartin et als.f#page=203 #ITP #Imandra #DeepLearning
++ [[https://arxiv.org/abs/2404.09939][A survey on deep learning for theorem proving]]. ~ Zhaoyu Li et als. #ITP #DeepLearning
++ [[https://mpaviotti.github.io/assets/papers/intro-cat24.pdf][Category theory (Course notes)]]. ~ Domini Corchard, Marco Paviotti. #CategoryTheory
+
 *** 17-Abr-24
 + [[https://www.sciencedirect.com/science/article/pii/S1570866706000311][Exact arithmetic on the Stern–Brocot tree]]. ~ Milad Niqui (2007). #ITP #Coq #Math
 + [[https://www.youtube.com/live/ksW04Cl2dgo][The Haskell Unfolder Episode 23: specialisation]]. ~ Edsko de Vries (@EdskoDeVries), Andres Löh (@kosmikus@functional.cafe). #Haskell #FunctionalProgramming
