--- a/README.org
+++ b/README.org
@@ -60,6 +60,10 @@ its content.
 
 ** Abril 2024
 
+*** 19-Abr-24
++ [[https://oleg.fi/gists/posts/2024-04-12-core-inspection.html][Core inspection]]. ~ Oleg Grenrus. #Haskell #FunctionalProgramming
++ [[http://jackkelly.name/blog/archives/2024/04/13/why_streaming_is_my_favourite_haskell_streaming_library/index.html][Why streaming is my favourite Haskell streaming library]]. ~Jack Kelly. #FunctionalProgramming #Haskell
+
 *** 18-Abr-24
 + [[https://arxiv.org/abs/2404.08163][ViCAR: Visualizing categories with automated rewriting in Coq]]. ~ Bhakti Shah et als. #ITP #Coq
 + [[https://arxiv.org/abs/2404.12048][Symbolic computation for all the fun]]. ~ Chad E. Brown, Mikoláš Janota, Mirek Olšák. #AIMO #ATP #SMT #Math
