--- a/README.org
+++ b/README.org
@@ -61,6 +61,10 @@ its content.
 
 ** Mayo 2024
 
+*** 07-May-24
++ [[https://arxiv.org/abs/2405.03264][Delooping generated groups in homotopy type theory]]. ~ Camil Champin, Samuel Mimram, Emile Oleon. #ITP #Agda #Math
++ [[https://arxiv.org/abs/2405.02318][NL2FOL: Translating natural language to first-order logic for logical fallacy detection]]. ~ Abhinav Lalwani, Lovish Chopra, Christopher Hahn, Caroline Trippel, Zhijing Jin, Mrinmaya Sachan. #LLMs #SMT #Logic
+
 *** 05-May-24
 + [[https://arxiv.org/abs/2405.01379][Verification and refinement of natural language explanations through LLM-symbolic theorem proving]]. ~ Xin Quan, Marco Valentino, Louise A. Dennis, André Freitas. #AI #LLMs #ITP #IsabelleHOL
 
